changed the java run time version and a small piece of code
Signed-off-by: Berk Delibalta <berkdelibalta@gmail.com>